gccida/c1/ix86_expand_prologue
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_prologue/src/i386.c:4716:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_prologue/src/obj/i386.o] Error 1
